--- a/.github/workflows/project-automation.yml
+++ b/.github/workflows/project-automation.yml
@@ -4,6 +4,11 @@ on:
   issues:
     types: [opened, closed, reopened]
 
+permissions:
+  contents: read
+  issues: write
+  repository-projects: write
+
 jobs:
   add_to_projects:
     runs-on: ubuntu-latest
