Complete development environment setup and documentation
- Add enhanced development scripts (debug, turbo, clean, format, pre-commit)
- Create comprehensive environment variables template (.env.example)
- Add development setup documentation (docs/development-setup.md)
- Create project README.md with complete setup instructions
- Add CHANGELOG.md following Keep a Changelog format
- Update CLAUDE.local.md with current development status
- All quality gates passing (type-check, lint, format, build)

Technical improvements:
- Environment variables: Inoreader OAuth (3 values) + Anthropic API
- Development workflow: Pre-commit hooks with quality validation
- Documentation: Complete development and project setup guides
- Project structure: Clean foundation for PWA implementation

Ready for Epic 1 development starting with Issue #5 (PWA setup).

Fixes #2

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:debug": "NODE_OPTIONS='--inspect' next dev",
+    "dev:turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,7 +15,11 @@
     "test:integration": "vitest --config vitest.config.integration.ts",
     "test:e2e": "playwright test",
     "test:watch": "vitest --watch",
-    "analyze": "cross-env ANALYZE=true next build"
+    "analyze": "cross-env ANALYZE=true next build",
+    "clean": "rm -rf .next out node_modules/.cache",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "pre-commit": "npm run type-check && npm run lint && npm run format:check"
   },
   "dependencies": {
     "next": "^14.2.15",
