--- a/package.json
+++ b/package.json
@@ -22,43 +22,45 @@
     "pre-commit": "npm run type-check && npm run lint && npm run format:check"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "dexie": "^4.0.8",
+    "lucide-react": "^0.427.0",
     "next": "^14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zustand": "^5.0.0",
-    "dexie": "^4.0.8",
-    "axios": "^1.7.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.5.0",
-    "lucide-react": "^0.427.0"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.15",
+    "@tailwindcss/typography": "^0.5.14",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.4",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.15",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "tailwindcss": "^3.4.7",
-    "postcss": "^8.4.40",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "@tailwindcss/typography": "^0.5.14",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.15",
+    "playwright": "^1.46.0",
+    "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4",
     "vitest": "^2.0.5",
-    "@vitejs/plugin-react": "^4.3.1",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/user-event": "^14.5.2",
-    "playwright": "^1.46.0",
-    "cross-env": "^7.0.3",
-    "workbox-webpack-plugin": "^7.1.0",
-    "@next/bundle-analyzer": "^14.2.15"
+    "workbox-webpack-plugin": "^7.1.0"
   }
 }
