chore: end session - configure Vitest and create Epic 2 issues
Session duration: 5 minutes
Main focus: Development environment setup and Epic 2 planning

Changes include:
- Created vitest.config.ts with React and path alias setup
- Added test-setup.ts with fake-indexeddb for testing
- Updated tsconfig.json to include Vitest global types
- Created Epic 2 GitHub issues (#20-24)
- Updated Next Session Instructions
- Removed old session instruction files

Work saved at session end for continuity

--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.15",
+    "fake-indexeddb": "^6.0.1",
+    "jsdom": "^26.1.0",
     "playwright": "^1.46.0",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
