fix: authentication and network access improvements
- Fixed auth loading loop by changing from reactive useEffect to single mount check
- Added ngrok integration for secure HTTPS access from any device
- Updated OAuth callback to handle proxied requests with proper host detection
- Added dev:network and dev:https npm scripts for easier development
- Created SSL certificates and custom HTTPS server configuration

Authentication now works properly via ngrok URL for cross-device testing.
Updated documentation and session instructions for next development phase.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:network": "next dev --hostname 0.0.0.0",
+    "dev:https": "node server.js",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "dev:turbo": "next dev --turbo",
     "build": "next build",
