--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "dexie": "^4.0.8",
     "lucide-react": "^0.427.0",
     "next": "^14.2.15",
