feat: implement article detail reading page
- Create dynamic route /reader/article/[id] for article details
- Build ArticleDetail component with clean Typography styling
- Add swipe navigation for touch devices
- Implement keyboard navigation (arrow keys and escape)
- Add article metadata display (author, date, feed)
- Include star/unstar and share functionality
- Optimize performance with proper URL encoding
- Add proper error, loading, and not-found pages
- Sanitize HTML content with DOMPurify

Fixes #22

--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@types/dompurify": "^3.0.5",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.8",
+    "isomorphic-dompurify": "^2.26.0",
     "lucide-react": "^0.427.0",
     "next": "^14.2.15",
     "react": "^18.3.1",
