fix: update project automation workflow to use PROJECT_AUTOMATION_TOKEN
The workflow was failing with 'Could not resolve to a ProjectV2 with the number 7'
because it was using GITHUB_TOKEN which lacks permissions to interact with
GitHub Projects V2. Updated both project addition steps to use
PROJECT_AUTOMATION_TOKEN which has the necessary project permissions.

--- a/.github/workflows/project-automation.yml
+++ b/.github/workflows/project-automation.yml
@@ -18,13 +18,13 @@ jobs:
         uses: actions/add-to-project@main
         with:
           project-url: https://github.com/users/shayonpal/projects/7
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PROJECT_AUTOMATION_TOKEN }}
 
       - name: Add to Project 5
         uses: actions/add-to-project@main
         with:
           project-url: https://github.com/users/shayonpal/projects/5
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PROJECT_AUTOMATION_TOKEN }}
 
   update_status:
     runs-on: ubuntu-latest
