--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@supabase/supabase-js": "^2.51.0",
     "@types/dompurify": "^3.0.5",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.0",
