--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,27 +2,27 @@
   "name": "Shayon's News",
   "short_name": "News",
   "description": "AI-powered RSS reader with offline support",
-  "start_url": "/",
+  "start_url": "/reader/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#FF6B35",
   "orientation": "portrait",
-  "scope": "/",
+  "scope": "/reader/",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/reader/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/reader/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/apple-touch-icon.png",
+      "src": "/reader/icons/apple-touch-icon.png",
       "sizes": "180x180",
       "type": "image/png",
       "purpose": "any"
