--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ NEXT_PUBLIC_INOREADER_REDIRECT_URI=http://localhost:3000/api/auth/callback/inore
 
 # Anthropic Claude API
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
+CLAUDE_SUMMARIZATION_MODEL=claude-sonnet-4-20250514
 
 # Environment
 NODE_ENV=development
