--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ CLAUDE_SUMMARIZATION_MODEL=claude-sonnet-4-20250514
 
 # Environment
 NODE_ENV=development
+
+# Sync Configuration
+SYNC_MAX_ARTICLES=100              # Number of articles to fetch per sync (default: 100)
+ARTICLES_RETENTION_LIMIT=1000      # Number of articles to keep during auto-cleanup (default: 1000)
