--- a/.env.server.example
+++ b/.env.server.example
@@ -31,3 +31,7 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 
 # Environment
 NODE_ENV=production
+
+# Sync Configuration
+SYNC_MAX_ARTICLES=100              # Number of articles to fetch per sync (default: 100)
+ARTICLES_RETENTION_LIMIT=1000      # Number of articles to keep during auto-cleanup (default: 1000)
