--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "isomorphic-dompurify": "^2.26.0",
     "lucide-react": "^0.427.0",
     "next": "^14.2.15",
+    "node-cron": "^4.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.0",
