feat: implement bi-directional sync with Inoreader (TODO-037, TODO-038)
- Add sync queue table for tracking local changes
- Implement server-side BiDirectionalSyncService with 5-minute periodic sync
- Add client-side integration to queue read/unread/star/unstar actions
- Fix SQL syntax error in add_to_sync_queue function (TODO-038)
- Add error handling to RPC calls in article store
- Update documentation in CHANGELOG.md and README.md
- Test implementation with Playwright browser automation

Changes now sync back to Inoreader, ensuring reading progress stays synchronized across all clients.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "pre-commit": "npm run type-check && npm run lint && npm run format:check",
-    "setup:oauth": "node server/scripts/setup-oauth.js"
+    "setup:oauth": "node server/scripts/setup-oauth.js",
+    "server": "node server/server.js",
+    "server:dev": "nodemon server/server.js"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
@@ -40,6 +42,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.8",
     "dotenv": "^17.2.0",
