--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,11 @@ NODE_ENV=development
 # Sync Configuration
 SYNC_MAX_ARTICLES=100              # Number of articles to fetch per sync (default: 100)
 ARTICLES_RETENTION_LIMIT=1000      # Number of articles to keep during auto-cleanup (default: 1000)
+
+# Bi-directional Sync Configuration
+SYNC_INTERVAL_MINUTES=5            # How often to sync while app is open
+SYNC_MIN_CHANGES=5                 # Minimum changes before triggering sync
+SYNC_BATCH_SIZE=100                # Articles per edit-tag API call
+SYNC_RETRY_BACKOFF_MINUTES=10      # Initial retry delay
+SYNC_MAX_RETRIES=3                 # Maximum retry attempts
+SYNC_SERVER_URL=http://localhost:3001  # Bi-directional sync server URL
