--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,11 @@ NEXT_PUBLIC_INOREADER_REDIRECT_URI=http://localhost:3000/api/auth/callback/inore
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 CLAUDE_SUMMARIZATION_MODEL=claude-sonnet-4-20250514
 
+# AI Summarization Configuration
+SUMMARY_WORD_COUNT=150-175                        # Target summary length (e.g., "150-175", "200")
+SUMMARY_FOCUS=key facts, main arguments, and important conclusions  # What to emphasize in summary
+SUMMARY_STYLE=objective                           # Writing style (e.g., "objective", "technical", "conversational")
+
 # Environment
 NODE_ENV=development
 
