--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ SUMMARY_WORD_COUNT=150-175                        # Target summary length (e.g.,
 SUMMARY_FOCUS=key facts, main arguments, and important conclusions  # What to emphasize in summary
 SUMMARY_STYLE=objective                           # Writing style (e.g., "objective", "technical", "conversational")
 
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
 # Environment
 NODE_ENV=development
 
