fix: iOS PWA status bar color and safe area handling (TODO-046)
Implemented smart PWA detection to fix iOS status bar issues without affecting browser mode.

Changes made:
- Changed statusBarStyle to 'black-translucent' for seamless iOS integration
- Updated theme colors: white for light mode, black for dark mode
- Created PWADetector component to detect standalone mode
- Applied conditional CSS for safe area padding only in PWA mode
- Fixed article title cutoff with proper safe area handling
- Removed hardcoded padding that caused issues in browser mode

Documentation updated:
- Updated TODOs.md with solution details
- Updated Next Session Instructions with completion status

Cleanup performed:
- Removed 3 console.log statements from article-detail.tsx
- Removed temporary screenshot files used for debugging
- Cleaned up error handling comments

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/reader/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#FF6B35",
+  "theme_color": "#000000",
   "orientation": "portrait",
   "scope": "/reader/",
   "icons": [
