--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pre-commit": "npm run type-check && npm run lint && npm run format:check",
     "setup:oauth": "node server/scripts/setup-oauth.js",
     "server": "node server/server.js",
-    "server:dev": "nodemon server/server.js"
+    "server:dev": "nodemon server/server.js",
+    "backup:claude": "./scripts/backup-claude-to-dev.sh"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
