--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^2.5.0",
     "uuid": "^11.1.0",
     "zustand": "^5.0.0"
