--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,8 @@ update-project-fields.js
 # Personal documentation
 docs/revised-priority.md
 
+# Claude settings
+.claude/settings.local.json
+
 # Token files
 ~/.rss-reader/tokens.json
