fix: implement comprehensive environment variable management (TODO-039d)
- Add environment validation script that checks all 30+ required variables
- Fix missing NEXT_PUBLIC_* variables causing client-side failures
- Export all NEXT_PUBLIC_* variables at build time for proper embedding
- Standardize SUPABASE_SERVICE_KEY to SUPABASE_SERVICE_ROLE_KEY
- Add prebuild validation to prevent deployments with missing config
- Delete redundant .env.server.example and .env.test files
- Create comprehensive documentation for env variable management

This fixes the critical issue where client-side code couldn't access
environment variables, reducing production errors from 5 to 3.

Fixes: TODO-039d

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:https": "node server.js",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "dev:turbo": "next dev --turbo",
+    "prebuild": "./scripts/validate-env.sh",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
