--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,86 @@
-# Environment Variables Template
-# Copy this file to .env.local and fill in your actual values
+# RSS News Reader Environment Variables
+# ALL variables are REQUIRED for the application to function properly
+# Copy this file to .env and fill in your actual values
 
-# Inoreader API Configuration
-NEXT_PUBLIC_INOREADER_CLIENT_ID=your_client_id_here
-INOREADER_CLIENT_SECRET=your_client_secret_here
-NEXT_PUBLIC_INOREADER_REDIRECT_URI=http://localhost:3000/api/auth/callback/inoreader
+# ========================================
+# CLIENT-SIDE VARIABLES (Build-time)
+# ========================================
+# These NEXT_PUBLIC_* variables MUST be available at build time
+# They are embedded into the client-side JavaScript bundle during build
+
+# Database Configuration (Client)
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# Application URLs
+NEXT_PUBLIC_BASE_URL=http://100.96.166.53              # Base URL without port
+NEXT_PUBLIC_APP_URL=http://100.96.166.53:3147         # Full app URL with port
+
+# Inoreader OAuth (Client)
+NEXT_PUBLIC_INOREADER_CLIENT_ID=your_inoreader_client_id
+NEXT_PUBLIC_INOREADER_REDIRECT_URI=http://localhost:8080/auth/callback
+
+# ========================================
+# SERVER-SIDE VARIABLES (Runtime)
+# ========================================
+# These variables are used by the server and don't need to be in the client bundle
+
+# Inoreader OAuth (Server)
+INOREADER_CLIENT_ID=your_inoreader_client_id          # Same as NEXT_PUBLIC_INOREADER_CLIENT_ID
+INOREADER_CLIENT_SECRET=your_inoreader_client_secret
+INOREADER_REDIRECT_URI=http://localhost:8080/auth/callback
+
+# Database Configuration (Server)
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
 # Anthropic Claude API
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
+ANTHROPIC_API_KEY=sk-ant-api03-your-key-here
 CLAUDE_SUMMARIZATION_MODEL=claude-sonnet-4-20250514
 
 # AI Summarization Configuration
-SUMMARY_WORD_COUNT=150-175                        # Target summary length (e.g., "150-175", "200")
-SUMMARY_FOCUS=key facts, main arguments, and important conclusions  # What to emphasize in summary
-SUMMARY_STYLE=objective                           # Writing style (e.g., "objective", "technical", "conversational")
+SUMMARY_WORD_COUNT=70-80                               # Target summary length
+SUMMARY_FOCUS=key facts, main arguments, and important conclusions
+SUMMARY_STYLE=objective                                # Writing style
 
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+# Token Security
+TOKEN_ENCRYPTION_KEY=your_32_byte_base64_key_here     # Generate with: openssl rand -base64 32
 
-# Environment
-NODE_ENV=development
+# Server Configuration
+SERVER_PORT=8080                                       # OAuth server port
+RSS_READER_TOKENS_PATH=~/.rss-reader/tokens.json      # Token storage location
+
+# Test Credentials (for automated OAuth setup)
+TEST_INOREADER_EMAIL=your_test_email@example.com
+TEST_INOREADER_PASSWORD=your_test_password
 
 # Sync Configuration
-SYNC_MAX_ARTICLES=100              # Number of articles to fetch per sync (default: 100)
-ARTICLES_RETENTION_LIMIT=1000      # Number of articles to keep during auto-cleanup (default: 1000)
+SYNC_MAX_ARTICLES=300                                  # Articles per sync (max 1000)
+ARTICLES_RETENTION_LIMIT=1000                          # Max articles to keep
 
-# Bi-directional Sync Configuration
-SYNC_INTERVAL_MINUTES=5            # How often to sync while app is open
-SYNC_MIN_CHANGES=5                 # Minimum changes before triggering sync
-SYNC_BATCH_SIZE=100                # Articles per edit-tag API call
-SYNC_RETRY_BACKOFF_MINUTES=10      # Initial retry delay
-SYNC_MAX_RETRIES=3                 # Maximum retry attempts
-SYNC_SERVER_URL=http://localhost:3001  # Bi-directional sync server URL
+# Environment
+NODE_ENV=development                                   # development | production | test
+
+# ========================================
+# ENVIRONMENT-SPECIFIC CONFIGURATION
+# ========================================
+# These allow different values for production vs development
+
+# Production Settings
+PROD_PORT=3147
+PROD_NODE_ENV=production
+PROD_NEXT_PUBLIC_BASE_URL=http://100.96.166.53
+
+# Development Settings
+DEV_PORT=3000
+DEV_NODE_ENV=development
+DEV_NEXT_PUBLIC_BASE_URL=http://100.96.166.53
+
+# ========================================
+# NOTES
+# ========================================
+# 1. All variables listed above are REQUIRED
+# 2. Missing any variable will cause build/runtime failures
+# 3. NEXT_PUBLIC_* variables must be set before running 'npm run build'
+# 4. Run './scripts/validate-env.sh' to verify all variables are set
+# 5. For production deployment, ensure production URLs are used
+# 6. Keep sensitive values (keys, passwords) secure and never commit them
