fix: address QA and DBA review findings for sync progress tracking
- Fixed database schema mismatch: changed sync_id from UUID to TEXT
- Added better error logging for database write failures
- Added logging when falling back from file to database
- Updated cleanup to use expires_at column instead of created_at
- Fixed production build configuration with proper start:prod script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev:turbo": "next dev --turbo",
     "prebuild": "./scripts/validate-env.sh",
     "build": "next build",
+    "build:prod": "NEXT_BUILD_DIR=.next-prod next build",
     "start": "next start",
+    "start:prod": "NEXT_BUILD_DIR=.next-prod next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "test": "vitest",
