fix: separate unit and integration test configurations (RR-118)
- Fixed integration tests failing due to global fetch mocking interference
- Added vitest.config.integration.ts for integration tests with node environment
- Updated vitest.config.ts to exclude integration directory from unit tests
- Created test-setup-integration.ts without fetch mocking for real HTTP requests
- Updated package.json scripts to run both test configurations correctly
- Added comprehensive test documentation in src/__tests__/README.md
- Added acceptance criteria tests and configuration verification tests
- Integration tests can now make real HTTP requests without mock interference
- No breaking changes to existing test structure or API

Resolves Linear issue RR-118

--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "test": "vitest",
-    "test:unit": "vitest --config vitest.config.unit.ts",
-    "test:integration": "vitest --config vitest.config.integration.ts",
+    "test": "vitest run && vitest run --config vitest.config.integration.ts",
+    "test:unit": "vitest",
+    "test:integration": "vitest run --config vitest.config.integration.ts",
+    "test:integration:safe": "pm2 stop rss-reader-dev && npm run test:integration && pm2 start rss-reader-dev",
     "test:e2e": "playwright test",
     "test:watch": "vitest --watch",
     "analyze": "cross-env ANALYZE=true next build",
