--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@supabase/supabase-js": "^2.51.0",
     "@types/dompurify": "^3.0.5",
     "@types/uuid": "^10.0.0",
@@ -54,6 +55,7 @@
     "lucide-react": "^0.427.0",
     "next": "^14.2.15",
     "node-cron": "^4.2.1",
+    "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sonner": "^2.0.6",
