test(RR-124): add comprehensive test suite for monitoring script updates
- Add test files for validating freshness API removal
- Add validation scripts for monitoring improvements
- Add test execution reports and edge case tests
- Update CHANGELOG.md with RR-124 completion details
- Verify sidebar last sync time fix and Uptime Kuma integration

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ docs/revised-priority.md
 # Token files
 ~/.rss-reader/tokens.json
 documentation-analysis-report.json
+
+# Uptime Kuma configuration
+.kuma-push-urls
+kuma-monitor.config.js
