fix: TypeScript configuration and test setup for v0.12.0 release
- Fixed tsconfig.json for ES2015 target with downlevel iteration support
- Added production TypeScript config excluding test files
- Fixed environment variable validation script for unset NODE_ENV
- Removed unused import from article-list-state-manager.ts
- Fixed test-setup.ts for proper environment mocking
- Build now succeeds for production deployment

Technical changes:
- Target ES2015 with downlevelIteration: true for Set iteration
- Enhanced TypeScript lib support for DOM and ES2017 features
- Cleaned up test utilities for consistent environment setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,10 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "es6"
+      "es2015",
+      "es2017"
     ],
+    "target": "es2015",
     "types": [
       "vitest/globals",
       "@testing-library/jest-dom"
@@ -20,6 +22,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "downlevelIteration": true,
     "plugins": [
       {
         "name": "next"
