--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -3,22 +3,11 @@
   "exclude": [
     "node_modules",
     "docs/**/*",
-    "logs/**/*",
-    "test-results/**/*",
-    "tests/**/*",
-    "scripts/**/*.test.js",
-    "src/**/*.test.ts",
-    "src/**/*.test.tsx",
-    "src/**/*.spec.ts",
-    "src/**/*.spec.tsx",
     "src/__tests__/**/*",
+    "**/*.test.ts",
+    "**/*.spec.ts",
     "src/test-setup.ts",
-    "src/test-setup-integration.ts",
-    "src/test-utils/**/*",
-    "**/__tests__/**/*",
-    "vitest.config.ts",
-    "vitest.config.*.ts",
-    "playwright.config.ts",
-    ".next-test/**/*"
+    "src/test-utils/**/*"
   ]
 }
+EOF < /dev/null
