fix(monitoring): correct health endpoint URLs and improve service monitoring
- Fixed rss-services-monitor restart loops by adding /reader prefix to health URLs
- Updated fetch success rate monitoring to use corrected /api/health/parsing endpoint
- Replaced placeholder API usage monitoring with actual health checks
- Eliminated false alerts in Uptime Kuma monitoring dashboard

Files updated: ecosystem.config.js, monitor-services-pm2.sh, push-to-kuma.sh

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,8 @@ documentation-analysis-report.json
 # Uptime Kuma configuration
 .kuma-push-urls
 kuma-monitor.config.js
+
+# Test and debug logs
+*.log
+rr-*.log
+test-output.log
