--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rss-news-reader",
-  "version": "0.12.0",
+  "version": "0.12.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -50,6 +50,7 @@
     "dexie": "^4.0.8",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "he": "^1.2.0",
     "isomorphic-dompurify": "^2.26.0",
     "lucide-react": "^0.536.0",
     "next": "^14.2.15",
@@ -68,6 +69,7 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/he": "^1.2.3",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.3",
