--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "type-check": "tsc --noEmit",
     "type-check:prod": "tsc --noEmit -p tsconfig.prod.json",
     "test": "./scripts/safe-test-runner.sh",
+    "test:optimized": "./scripts/optimized-test-runner.sh",
+    "test:parallel": "./scripts/optimized-test-runner.sh parallel",
+    "test:sequential": "./scripts/optimized-test-runner.sh sequential",
+    "test:sharded": "./scripts/optimized-test-runner.sh sharded",
+    "test:progressive": "./scripts/optimized-test-runner.sh progressive",
     "test:unit": "vitest",
     "test:integration": "vitest run --config vitest.config.integration.ts",
     "test:integration:safe": "pm2 stop rss-reader-dev && npm run test:integration && pm2 start rss-reader-dev",
     "test:e2e": "playwright test",
+    "test:performance": "node scripts/check-performance-regression.js",
     "test:watch": "vitest --watch",
     "analyze": "cross-env ANALYZE=true next build",
     "clean": "rm -rf .next out node_modules/.cache",
