--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,15 @@
 # production
 /build
 
+# caches and alt build dirs
+.cache/
+
+# playwright reports
+playwright-report/
+tests/artifacts/
+tests/reports/playwright/
+tests/reports/performance/
+
 # misc
 .DS_Store
 *.pem
@@ -48,6 +57,7 @@ next-env.d.ts
 # Local development
 CLAUDE.local.md
 update-project-fields.js
+GEMINI.md
 
 # Logs
 /logs/
@@ -64,6 +74,9 @@ docs/revised-priority.md
 # Token files
 ~/.rss-reader/tokens.json
 documentation-analysis-report.json
+
+# Accidental tilde dir
+~/
 
 # Uptime Kuma configuration
 .kuma-push-urls
