fix(build): resolve dev server crashes from shared .next directory conflicts (RR-172)
- Separated build directories to prevent conflicts: dev uses .next-dev, build uses .next-build, tests use .next-test
- Modified package.json scripts to set NEXT_BUILD_DIR environment variable for all dev and build commands
- Fixed service worker output from ../public/sw.js to static/sw.js to prevent working tree modifications
- Updated TypeScript config to include new build directory types (.next-dev, .next-build)
- Updated validation and monitoring scripts to handle multiple build directories dynamically
- Enhanced build validation script to use NEXT_BUILD_DIR environment variable
- Updated startup sequence and webpack recovery scripts for multi-directory support

This resolves crashes when running npm run build while dev server is running, enabling simultaneous development and build operations.

--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "dev:network": "next dev --hostname 0.0.0.0",
-    "dev:https": "node server.js",
-    "dev:debug": "NODE_OPTIONS='--inspect' next dev",
-    "dev:turbo": "next dev --turbo",
+    "dev": "NEXT_BUILD_DIR=.next-dev next dev",
+    "dev:network": "NEXT_BUILD_DIR=.next-dev next dev --hostname 0.0.0.0",
+    "dev:https": "NEXT_BUILD_DIR=.next-dev node server.js",
+    "dev:debug": "NEXT_BUILD_DIR=.next-dev NODE_OPTIONS='--inspect' next dev",
+    "dev:turbo": "NEXT_BUILD_DIR=.next-dev next dev --turbo",
     "prebuild": "./scripts/validate-env.sh",
-    "build": "next build",
-    "start": "next start",
+    "build": "NEXT_BUILD_DIR=.next-build next build",
+    "start": "NEXT_BUILD_DIR=.next-build next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "test": "./scripts/safe-test-runner.sh",
