--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,7 +52,9 @@
     "src/constants/**/*.ts",
     ".next/types/**/*.ts",
     ".next-test/types/**/*.ts",
-    ".next-test-rr102/types/**/*.ts"
+    ".next-test-rr102/types/**/*.ts",
+    ".next-dev/types/**/*.ts",
+    ".next-build/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
