--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.57.0",
+    "@asteasolutions/zod-to-openapi": "^8.1.0",
     "@mozilla/readability": "^0.6.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -46,6 +47,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/supabase-js": "^2.51.0",
     "@types/dompurify": "^3.0.5",
+    "@types/swagger-ui-react": "^5.18.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.0",
@@ -63,8 +65,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sonner": "^2.0.6",
+    "swagger-ui-react": "^5.27.1",
     "tailwind-merge": "^2.5.0",
     "uuid": "^11.1.0",
+    "zod": "^4.0.17",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
