--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-dom": "^18.3.1",
     "sonner": "^2.0.6",
     "swagger-ui-react": "^5.27.1",
+    "swagger-ui-themes": "^3.0.1",
     "tailwind-merge": "^2.5.0",
     "uuid": "^11.1.0",
     "zod": "^4.0.17",
