feat(api): implement Insomnia export functionality with comprehensive developer tooling (RR-204)
- **New API Endpoint**: `/api/insomnia.json` for exporting OpenAPI spec as Insomnia v4 collection
  - Rate limiting: 1 request/minute per IP with immediate cleanup to prevent memory leaks
  - CORS security: Restricted to known origins (localhost, 127.0.0.1, Tailscale, insomnia.rest)
  - ETag caching support with 5-minute cache duration for performance
  - Auto-detects base URL from request headers for environment configuration

- **Converter Library**: `src/lib/openapi/insomnia-converter.ts`
  - Converts OpenAPI 3.1 to Insomnia v4 format with full schema validation
  - Generates workspace, environments, folders (organized by tags), and requests
  - Memory-efficient implementation with proper resource cleanup
  - Handles authentication, parameters, and request bodies

- **Swagger UI Integration**: Added "Export to Insomnia" button for one-click download
- **CLI Export Script**: `scripts/export-insomnia.ts` with memory optimization
- **Comprehensive Testing**: Unit tests, API tests, and E2E validation
- **Documentation**: Complete setup guide at `docs/api/insomnia-setup.md`

**Critical Fixes**:
- Fixed rate limiting memory leak with immediate cleanup
- Removed fake streaming implementation for better performance
- Added comprehensive TypeScript types and OpenAPI validation
- CORS restricted to specific trusted domains only

**Developer Experience**: Enables seamless API testing workflow:
Swagger UI → Export to Insomnia → Import collection → Test endpoints

Breaking Changes: None - This is a new feature addition

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "setup:oauth": "node server/scripts/setup-oauth.js",
     "server": "node server/server.js",
     "server:dev": "nodemon server/server.js",
-    "backup:claude": "./scripts/backup-claude-to-dev.sh"
+    "backup:claude": "./scripts/backup-claude-to-dev.sh",
+    "export:insomnia": "tsx scripts/export-insomnia.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.57.0",
