feat(docs): complete OpenAPI documentation with 100% coverage for all 45 endpoints (RR-208)
- **Achievement**: Documented all remaining 11 endpoints to reach 100% OpenAPI coverage (45/45 endpoints)
- **Performance**: Validation script optimized to run in <2 seconds (enhanced from original implementation)
- **Interactive Documentation**: All endpoints now support "Try it out" functionality via operationId implementation

**Symbol-Level Changes**:
- generateOpenAPIDocument (src/lib/openapi/registry.ts): Added operationId to all 45 endpoint registrations
- validateCoverage (scripts/validate-openapi-coverage.js): Enhanced validation for 45 endpoints with performance optimization
- Package.json scripts: Added docs:validate, docs:coverage, docs:serve workflow

**Coverage Breakdown by Category**:
- Health endpoints: 6/6 (100%) - Main health check, app, database, cron, parsing, Claude AI
- Sync endpoints: 7/7 (100%) - Manual sync, status polling, metadata, bidirectional sync, API usage
- Articles endpoints: 4/4 (100%) - Paginated listing, content fetching, summarization, tag management
- Tags endpoints: 5/5 (100%) - CRUD operations for tag management
- Inoreader endpoints: 8/8 (100%) - User info, subscriptions, stream contents, unread counts, edit tags, debug endpoints
- Auth endpoints: 1/1 (100%) - Inoreader authentication status
- Test endpoints: 7/7 (100%) - Development-only testing utilities (properly marked as dev-only)
- Analytics endpoints: 1/1 (100%) - Fetch statistics and usage metrics
- Feeds endpoints: 2/2 (100%) - Feed statistics and management
- Users endpoints: 2/2 (100%) - User timezone management
- Logs endpoints: 1/1 (100%) - Inoreader API call logging
- Insomnia endpoints: 1/1 (100%) - API export functionality

**New npm Scripts**:
- npm run docs:validate - Validate OpenAPI coverage (45/45 endpoints, <2s performance)
- npm run docs:coverage - Generate detailed coverage report with category breakdowns
- npm run docs:serve - Launch development server and aut

--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "server": "node server/server.js",
     "server:dev": "nodemon server/server.js",
     "backup:claude": "./scripts/backup-claude-to-dev.sh",
-    "export:insomnia": "tsx scripts/export-insomnia.ts"
+    "export:insomnia": "tsx scripts/export-insomnia.ts",
+    "docs:validate": "node scripts/validate-openapi-coverage.js",
+    "docs:coverage": "node scripts/validate-openapi-coverage.js --report",
+    "docs:serve": "npm run dev && open http://localhost:3000/reader/api-docs"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.57.0",
